sync dota constants
